Version 2.7.0
-------------
81. Add section about problems with starting emulators to troubleshooting
78. Fix Windows logging to file
74. Create install scripts for Linux, MacOS, and Windows

Version 2.6.0
-------------
72. [workshop] Improve exercises by removing typos and removing mention of SSH key
[workshop] Normalize notebooks
[workshop] Add exercise 5
[workshop] Add exercise 4
[workshop] Add exercise 3
[workshop] Add exercise 2
[workshop] Add exercise 1
75. Telegram: Fix sending messages and pictures for version 11.8.x
71. Improve README
67. Appium: Add logging upon initialization
15. Appium: log when appium is not running

Version 2.5.0
-------------
61. Telegram: improve navigating to home screen, lower sleep time when starting a call
59. WhatsApp: update support to 2.24.25.78

Version 2.4.0
-------------
57. Telegram: ending calls when not in an active call now raises an exception, add call status, bump adb-py to 1.0.3

Version 2.3.2
-------------
53. Telegram: Fix pictures could sometimes not be sent
51. Update appium-python-client version to 4.3.0

Version 2.3.1
-------------
49. Remove duplicate dependency of adb-py, bump adb-py to 1.0.2

Version 2.3.0
-------------
47. Add tests for versions being set correctly
45. Do no raise exception in telegram.end_call()
43. Add guidelines on creating test data
41. Add Google Maps documentation
38. Improve stability of sending Telegram pictures

Version 2.2.0
-------------
Add Google Maps support (based on v11.119.0101)
Update WhatsApp support to v2.24.20.89
Update Telegram support to v11.2.2
Add workshop files

Version 2.1.0
-------------
34. Update Appium python client to latest version (4.2), and make dependency more lenient
32. Allow Telegram package to be overwritten in constructor
30. Update Pillow and setuptools dependencies due to vulnerabilities

Version 2.0.1
-------------
Fix bug when starting appium session for specific packages

Version 2.0.0
-------------