@@ -55,10 +55,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from puma.apps.android.google_chrome.google_chrome import GoogleChromeActions\n",
+    "from workshop.apps.google_chrome.google_chrome_tutorial import GoogleChromeActionsTutorial\n",
     "# Set device udid. If your device udid is different, run adb devices and change the udid\n",
     "device_udid = \"YOUR DEVICE UDID\"\n",
-    "chrome_actions = GoogleChromeActions(device_udid)"
+    "chrome_actions = GoogleChromeActionsTutorial(device_udid)"
    ]
   },
   {
