@@ -1,5 +1,6 @@
 Version 2.7.0
 -------------
+90. [workshop] Move Google Chrome to separate tutorial implementation
 81. Add section about problems with starting emulators to troubleshooting
 78. Fix Windows logging to file
 74. Create install scripts for Linux, MacOS, and Windows
